--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <nav class="navbar ">
                 <div class="container">
                     <a class="navbar-brand" href="#">
-                        <img src="/img/Perfil 08-2022.jpg" alt="imagen Gustavo">
+                        <img src="./img/Perfil 08-2022.jpg" alt="imagen Gustavo"> <!--! agregue un punto a la ruta para ver si lo toma github-->
                     </a>
                 </div>
             </nav>
