Contenido al 18/01/2022 terminado

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currículum Vitae GMMB</title>
 
-    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="./css/style.css"> <!-- PRUEBA para github-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -26,7 +25,8 @@
             <nav class="navbar ">
                 <div class="container">
                     <a class="navbar-brand" href="#">
-                        <img src="./img/Perfil 08-2022.jpg" alt="imagen Gustavo"> <!--! agregue un punto a la ruta para ver si lo toma github-->
+                        <img src="./img/Perfil 08-2022.jpg" alt="imagen Gustavo">
+                        <!--! agregue un punto a la ruta para que lo tome github-->
                     </a>
                 </div>
             </nav>
@@ -210,7 +210,7 @@
                     <p>No hay viento favorable para el que no sabe donde va.</p>
                 </blockquote>
                 <figcaption class="blockquote-footer">
-                    Séneca <cite title="Source Title">Source Title</cite>
+                    Séneca
                 </figcaption>
             </figure>
             <hr>
@@ -223,7 +223,8 @@
                 <h5>FRONT END DEVELOPER</h5>
             </header>
 
-            <!--! exp laboral -->
+            <!--! ---------------------------------------------- experiencia laboral -------------------------------------------------->
+
             <div class="accordion" id="experienciaLaboral">
                 <!-- accordionPanelsStayOpen  https://www.youtube.com/watch?v=hGlKDPMhGG8&list=PLnunbwZjHqMO-JII_HBf5TAzdzaBJP34w&index=26 -->
                 <h3>Experiencia laboral</h3>
@@ -290,7 +291,7 @@
                     <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
                         aria-labelledby="panelsStayOpen-headingTwo">
                         <div class="accordion-body">
-                            <h5> Bootcamp AMR</h5>
+                            <h5>Bootcamp AMR</h5>
                             <h6>Bs.As. 2018-presente</h6>
                             <p>
                                 Bootcamp AMR Es el primer programa de entrenamiento con obstáculos de la Argentina.
@@ -467,12 +468,150 @@
                         </div>
                     </div>
                 </div>
+            </div>
 
+            <!--! ------------------------------------------//// certificaciones /// ---------------------------------------------------------- -->
+
+            <div class="accordion" id="certificados">
+                <!-- accordionPanelsStayOpen  https://www.youtube.com/watch?v=hGlKDPMhGG8&list=PLnunbwZjHqMO-JII_HBf5TAzdzaBJP34w&index=26 -->
+                <h3>Certificaciones</h3>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingC1">
+                        <!--? para individualizar cada item del acordeón, tuve que hacer cambios en:  id="panelsStayOpen-heading1" + data-bs-target="#panelsStayOpen-collapse1" + aria-controls="panelsStayOpen-collapse1" + id="panelsStayOpen-collapse1" + aria-labelledby="panelsStayOpen-heading1"  -->
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseC1" aria-expanded="true"
+                            aria-controls="panelsStayOpen-collapsec1">
+                            <h5>Programación</h5>
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseC1" class="accordion-collapse collapse show"
+                        aria-labelledby="panelsStayOpen-headingC1">
+                        <div class="accordion-body">
+                            <h5>Alura LATAM</h5>
+                            <p>
+                            <ul>
+                                <li> <a href="https://app.aluracursos.com/degree/certificate/94e9d4b0-018c-47f9-a22d-417f9386f6e3"
+                                        target="_blank">Principiante en Programación G4 - ONE</a></li>
+                                <li>HTML5 y CSS3 parte 1: Mi primera página web </li>
+                                <li>HTML5 y CSS3 parte 2: Posicionamiento, listas y navegación </li>
+                                <li>HTML5 y CSS3 parte 3: Trabajando con formularios y tablas </li>
+                                <li>HTML5 y CSS3 parte 4: css avanzado </li>
+                                <li>Git y GitHub</li>
+                                <li>Lógica de programación: Primeros pasos</li>
+                                <li>Lógica de programación: Conceptos primordiales</li>
+                                <li>Lógica de programación: Practicando con juegos y animaciones</li>
+                                <li>LinkedIn: Como hacer que tu perfil trabaje por Tí</li>
+                                <li>Productividad: Estrategias para actividades diarias</li>
+                                <li>Hábitos: Ser productivo para cumplir sus metas personales</li>
+                                <li>Foco: Enfocarse trae más resultados para el día a día</li>
+                            </ul>
+                            </p>
+                            <hr>
+                            <h5>UTN Buenos Aires</h5>
+                            <p>
+                            <ul>
+                                <li><a href="https://sceu-utnba.bitrix24.es/pub/document/30173/9b01522f19189fb44d8a3275fa3fcd87/"
+                                        target="_blank">Introducción a la programación Web</a>
+                                </li>
+                            </ul>
+                            </p>
+                            <hr>
+                            <h5>Open Bootcamp</h5>
+                            <p>
+                            <ul>
+                                <li>HTML5 y CSS3</li>
+                                <li>Python Básico</li>
+                            </ul>
+                            </p>
+                            <hr>
+                            <h5>Educación IT</h5>
+                            <p>
+                            <ul>
+                                <li>Software Tester QA Management</li>
+                                <li>Análisis y Diseño de Casos de Pruebas</li>
+                                <li>Git: Desarrollo Colaborativo</li>
+                                <li>Análisis Funcional</li>
+                                <li>Introducción al Paradigma de Objetos</li>
+                                <li>Java para no programadores</li>
+                                <li>Software Tester QA</li>
+                                <li>HTML5: Fundamentos Web</li>
+                                <li>Curso Introducción al lenguaje de Programación</li>
+                                <li>Seminario De SQL Server</li>
+                            </ul>
+                            </p>
+                            <hr>
+                            <h5>Platzi</h5>
+                            <p>
+                            <ul>
+                                <li>Curso de Diseño y Creación de Logos</li>
+                            </ul>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingC2">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseC2" aria-expanded="false"
+                            aria-controls="panelsStayOpen-collapseC2">
+                            <h5>Otras Habilidades</h5>
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseC2" class="accordion-collapse collapse"
+                        aria-labelledby="panelsStayOpen-headingC2">
+                        <div class="accordion-body">
+                            <h5>Instituto Universitario de la Policía Federal Argentina (IUPFA)</h5>
+                            <p>
+                            <ul>
+                                <li>Investigación mediante fuentes abiertas y dispositivos móviles Policía Federal
+                                    Argentina (OSINT)</li>
+                                <li>Curso Básico en Inteligencia Criminal de la Policía Federal Argentina</li>
+                            </ul>
+                            </p>
+                            <hr>
+                            <h5>Servicio Penitenciario de la Provincia de Buenos Aires, Dirección Operaciones Especiales
+                                (D.O.E.)</h5>
+                            <p>
+                            <ul>
+                                <li>Negociador de rehenes (1er curso internacional)</li>
+                            </ul>
+                            </p>
+                            <hr>
+                            <h5>GRUPO ESPECIAL DE INTERVENCIÓN, S.P.F. MINISTERIO DE JUSTICIA Y D.D.H.H.</h5>
+                            <p>
+                            <ul>
+                                <li>XXº Curso básico de operaciones especiales</li>
+                            </ul>
+                            </p>
+                            <hr>
+                            <h5>Ejército Argentino</h5>
+                            <p>
+                            <ul>
+                                <li>Seguridad a personas designadas. (custodia V.I.P.)</li>
+                            </ul>
+                            </p>
+                            <hr>
+                            <h5>INAP Instituto Nacional de Administración Pública</h5>
+                            <p>
+                            <ul>
+                                <li>Sensibilización en la temática de género y violencia contra las mujeres</li>
+                            </ul>
+                            </p>
+                            <hr>
+                            <h5>Ministerio de Ciencia, Tecnología e Innovación</h5>
+                            <p>
+                            <ul>
+                                <li>Certificación en PNL plataforma de aprendizaje virtual Punto digital.</li>
+                            </ul>
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
 
 
         </div>
-
 
     </div>
 
