--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-32x32.png">
 
 </head>
 
 <body class="container-fluid">
     <div class="dosColumnas container"> <!-- Las dos columnas principales -->
 
-        <div class="izq container col-4">
+        <div class="izq container col-4" id="colorOscuro">
             <!-- columna izquierda nav, brand, contacto, about // skills hard and soft -- idiomas -->
             <nav class="navbar ">
                 <div class="container">
@@ -34,18 +34,20 @@
             <div class="contact">
                 <div class="contIndividual">
                     <h5>
-                        <i class="bi bi-whatsapp"></i>
+                        <i class="bi bi-whatsapp" id="whatsappButton"></i>
                         <span class="textContact">
-                            <a href="https://api.whatsapp.com/send?phone=5491130150870" target="_blank">WhatsApp</a>
+                            <a id="whaText" href="https://api.whatsapp.com/send?phone=5491130150870"
+                                target="_blank">WhatsApp</a>
                         </span>
                     </h5>
                 </div>
 
                 <div class="contIndividual">
                     <h5>
-                        <i class="bi bi-envelope-fill"></i>
+                        <i class="bi bi-envelope-fill" id="sobre"></i>
                         <span class="textContact">
-                            <a href="mailto:gustavominchiotti@gmail.com" target="_blank">gustavominchiotti@gmail.com</a>
+                            <a id="sobreText" href="mailto:gustavominchiotti@gmail.com"
+                                target="_blank">gustavominchiotti@gmail.com</a>
                         </span>
                     </h5>
                 </div>
@@ -54,7 +56,8 @@
                     <h5>
                         <i class="bi bi-geo-alt-fill"></i>
                         <span class="textContact">
-                            <a href="https://goo.gl/maps/fsu7p4rMnowat8gs7" target="_blank">Ezeiza, Buenos Aires</a>
+                            <a id="mapText" href="https://goo.gl/maps/fsu7p4rMnowat8gs7" target="_blank">Ezeiza, Buenos
+                                Aires</a>
                         </span>
                     </h5>
                 </div>
@@ -64,7 +67,8 @@
                     <h5>
                         <i class="bi bi-linkedin"></i>
                         <span class="textContact">
-                            <a href="https://www.linkedin.com/in/gustavo-minchiotti/" target="_blank">LinkedIn</a>
+                            <a id="linkText" href="https://www.linkedin.com/in/gustavo-minchiotti/"
+                                target="_blank">LinkedIn</a>
                         </span>
                     </h5>
                 </div>
@@ -73,16 +77,14 @@
                     <h5>
                         <i class="bi bi-github"></i>
                         <span class="textContact">
-                            <a href="https://github.com/GustavoMinchiotti">GitHub</a>
+                            <a id="gitText" href="https://github.com/GustavoMinchiotti">GitHub</a>
                         </span>
                     </h5>
                 </div>
-
-
-                <!-- ver si acá pongo icono mas info o icono con tooltip o pop over ver también solo ocultar en responsive -->
-
             </div>
-            <hr>
+
+            <hr id="hr1"> <!--? ///////////////////// about ////////////////////// -->
+
             <section class="about">
                 <h3>Acerca de Mí</h3>
 
@@ -93,7 +95,7 @@
                     disfruto de verdad el aprendizaje continuo.
                 </p>
             </section>
-            <hr>
+            <hr id="hr2">
             <section class="idiomas">
                 <h3>Idiomas</h3>
                 <p>Inglés</p>
@@ -104,7 +106,7 @@
                     </div>
                 </div>
             </section>
-            <hr>
+            <hr id="hr3">
             <section class="skills">
                 <h3>Skills</h3>
                 <p>HTML</p>
@@ -155,7 +157,6 @@
                     </div>
                 </div>
 
-
                 <br><br>
                 <h3>Conocimientos</h3>
 
@@ -204,7 +205,7 @@
 
             </section>
 
-            <hr>
+            <hr id="hr4">
             <figure class="text-end">
                 <blockquote class="blockquote">
                     <p>No hay viento favorable para el que no sabe donde va.</p>
@@ -213,14 +214,35 @@
                     Séneca
                 </figcaption>
             </figure>
-            <hr>
+            <hr id="hr5">
         </div>
+        <!--? ////////////////////////////////////////////// columna derecha -------------------------------------------------->
+        <!--! ---------------------------------------------- columna derecha -------------------------------------------------->
+        <!--* ---------------------------------------------- columna derecha -------------------------------------------------->
+        <div class="der container col-8" id="colorClaro">
+            <!-- col derecha, experiencia laboral desplegable, estudios,  -->
+            <header id="colorHeader">
+                <div class="nombre">
+                    <h1>Gustavo M. Minchiotti</h1>
+                    <h5>FRONT END DEVELOPER</h5>
+                </div>
+                <div class="btns">
 
+                    <label class="switch">
+                        <input type="checkbox">
+                        <span class="slider"></span>
+                    </label>
 
-        <div class="der container col-8"><!-- col derecha, experiencia laboral desplegable, estudios,  -->
-            <header>
-                <h1>Gustavo M. Minchiotti</h1>
-                <h5>FRONT END DEVELOPER</h5>
+                    <div class="dropdown" style="float:right;">
+                        <button class="dropbtn"><i class="bi bi-palette-fill"></i></button>
+                        <div class="dropdown-content">
+                            <i class="bi bi-circle-fill" id="n1"></i>
+                            <i class="bi bi-circle-fill" id="n2"></i>
+                            <i class="bi bi-circle-fill" id="n3"></i>
+                            <i class="bi bi-circle-fill" id="n4"></i>
+                        </div>
+                    </div>
+                </div>
             </header>
 
             <!--! ---------------------------------------------- experiencia laboral -------------------------------------------------->
@@ -610,11 +632,9 @@
                 </div>
             </div>
 
-
         </div>
 
     </div>
-
 
     <script src="/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
