--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
                     <h5>FRONT END DEVELOPER</h5>
                 </div>
                 <div class="btns">
-
-                    <label class="switch">
+                    <!--* ////////////////////////////////// Toggle button //////////////////////////////////////////////////-->
+                    <label class="switch" id="dark">
                         <input type="checkbox">
                         <span class="slider"></span>
                     </label>
@@ -636,7 +636,7 @@
 
     </div>
 
-    <script src="/js/script.js"></script>
+    <script src="./js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
