--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
-<!--!    sass --watch sass/style.scss css/style.css    -->
+<html lang="es"> <!--!    sass --watch sass/style.scss css/style.css    -->
 
 <head>
     <meta charset="UTF-8">
@@ -8,13 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currículum Vitae GMMB</title>
 
-    <link rel="stylesheet" href="./css/style.css"> <!-- PRUEBA para github-->
+    <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
     <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-32x32.png">
-
 </head>
 
 <body class="container-fluid">
@@ -227,11 +225,6 @@
                     <h5>FRONT END DEVELOPER</h5>
                 </div>
                 <div class="btns">
-                    <!--* ////////////////////////////////// Toggle button //////////////////////////////////////////////////-->
-                    <label class="switch" id="dark">
-                        <input type="checkbox">
-                        <span class="slider"></span>
-                    </label>
 
                     <div class="dropdown" style="float:right;">
                         <button class="dropbtn"><i class="bi bi-palette-fill"></i></button>
@@ -240,6 +233,7 @@
                             <i class="bi bi-circle-fill" id="n2"></i>
                             <i class="bi bi-circle-fill" id="n3"></i>
                             <i class="bi bi-circle-fill" id="n4"></i>
+                            <i class="bi bi-circle-fill" id="n5"></i>
                         </div>
                     </div>
                 </div>
@@ -636,7 +630,7 @@
 
     </div>
 
-    <script src="./js/script.js"></script>
+    <script src="./js/script.js"></script> <!--? sin el punto no lo leía github -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
