Dark-light theme agregado

--- a/index.html
+++ b/index.html
@@ -226,6 +226,11 @@
                 </div>
                 <div class="btns">
 
+                    <label class="switch" >
+                        <input type="checkbox">
+                        <span class="slider" onclick="toggleTheme()"></span>
+                    </label>
+
                     <div class="dropdown" style="float:right;">
                         <button class="dropbtn"><i class="bi bi-palette-fill"></i></button>
                         <div class="dropdown-content">
