--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
-    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon.png">
 </head>
 
 <body class="container-fluid">
@@ -23,7 +23,7 @@
             <nav class="navbar ">
                 <div class="container">
                     <a class="navbar-brand" href="#">
-                        <img src="./img/Perfil 08-2022.jpg" alt="imagen Gustavo">
+                        <img src="./img/perfil.png" alt="imagen Gustavo">
                         <!--! agregue un punto a la ruta para que lo tome github-->
                     </a>
                 </div>
