--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="container">
                     <a class="navbar-brand" href="#">
                         <img src="./img/perfil.png" alt="imagen Gustavo">
-                        <!--! agregue un punto a la ruta para que lo tome github-->
+                        <!--! agregué un punto a la ruta para que lo tome github-->
                     </a>
                 </div>
             </nav>
@@ -45,7 +45,7 @@
                         <i class="bi bi-envelope-fill" id="sobre"></i>
                         <span class="textContact">
                             <a id="sobreText" href="mailto:gustavominchiotti@gmail.com"
-                                target="_blank">gustavominchiotti@gmail.com</a>
+                                target="_blank">E-mail</a>
                         </span>
                     </h5>
                 </div>
