Cambio en el titulo

--- a/index.html
+++ b/index.html
@@ -173,6 +173,14 @@
                         <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 75%"></div>
                     </div>
                 </div>
+                
+                <p>Figma</p>
+                <div class="progBar">
+                    <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75"
+                        aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 85%"></div>
+                    </div>
+                </div>
 
                 <br><br>
                 <h3>Aprendiendo</h3>
@@ -222,7 +230,7 @@
             <header id="colorHeader">
                 <div class="nombre">
                     <h1>Gustavo M. Minchiotti</h1>
-                    <h5>FRONT END DEVELOPER</h5>
+                    <h5>Frontend web Developer | UX/UI Designer</h5>
                 </div>
                 <div class="btns">
 
