--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <header id="colorHeader">
                 <div class="nombre">
                     <h1>Gustavo M. Minchiotti</h1>
-                    <h5>Frontend web Developer | UX/UI Designer</h5>
+                    <h5>UX/UI Designer | Frontend web Developer</h5>
                 </div>
                 <div class="btns">
 
@@ -402,6 +402,33 @@
             <div class="accordion" id="educación">
                 <!-- accordionPanelsStayOpen  https://www.youtube.com/watch?v=hGlKDPMhGG8&list=PLnunbwZjHqMO-JII_HBf5TAzdzaBJP34w&index=26 -->
                 <h3>Educación</h3>
+
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-heading1">
+                        <!--? para individualizar cada item del acordeón, tuve que hacer cambios en:  id="panelsStayOpen-heading1" + data-bs-target="#panelsStayOpen-collapse1" + aria-controls="panelsStayOpen-collapse1" + id="panelsStayOpen-collapse1" + aria-labelledby="panelsStayOpen-heading1"  -->
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapse1" aria-expanded="true"
+                            aria-controls="panelsStayOpen-collapse1">
+                            <h5>Diseño UX/UI</h5>
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapse1" class="accordion-collapse collapse show"
+                        aria-labelledby="panelsStayOpen-heading1">
+                        <div class="accordion-body">
+                            <h5>Agencia de Aprendizaje a lo largo de la Vida</h5>
+                            <h6>(marzo de 2023 - agosto de 2023)</h6>
+                            <p>
+                                Diseño UX/UI - DCU diseño centrado en el usuario, Diseño Gráfico, edición de Imagen y Marketing, 
+                                Técnicas de Investigación y Validación de hipótesis, Arquitectura de la información, Prototipado y Pruebas de Usabilidad. 
+                                
+                                <br>
+                                Tecnologías: Photoshop, Illustrator, Figma.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="panelsStayOpen-heading1">
                         <!--? para individualizar cada item del acordeón, tuve que hacer cambios en:  id="panelsStayOpen-heading1" + data-bs-target="#panelsStayOpen-collapse1" + aria-controls="panelsStayOpen-collapse1" + id="panelsStayOpen-collapse1" + aria-labelledby="panelsStayOpen-heading1"  -->
