--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <h3>Acerca de Mí</h3>
 
                 <p>
-                    Soy desarrollador front end Jr, quiero migrar al sector IT. Respecto a mi carrera actual y mi vasta
+                    Soy diseñador UX-UI y desarrollador front end Jr, quiero migrar al sector IT. Respecto a mi carrera actual y mi vasta
                     trayectoria demuestra claramente habilidades como: Estabilidad, Adaptabilidad a distintos entornos,
                     excelente actitud para el trabajo en equipo, comunicación asertiva, soy capacitador en negociación y
                     disfruto de verdad el aprendizaje continuo.
